# watch

./: .clang-format  .gitignore  .mxproject  CMakeLists.txt  startup_stm32f103xb.s  stm32f103cbtx_flash.ld  watch.ioc
Core/Inc/: main.h  stm32f1xx_it.h
Core/Src/: dma.c  gpio.c  i2c.c  main.c  spi.c  stm32f1xx_it.c  syscalls.c  system_stm32f1xx.c  usart.c
Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_ll_utils.c
User/: CMakeLists.txt
User/Inc/: Arduino.h  app.h  bsp_gpio.h  bsp_serial.h  bsp_spi.h  bsp_wire.h  fifo.h
User/Src/: app.cpp  bsp_gpio.cpp  bsp_serial.c  bsp_serial.cpp  bsp_wire.cpp  fifo.c  main.cpp
User/max30102/src/: MAX30105.cpp  MAX30105.h  heartRate.h  spo2_algorithm.cpp
User/rt-thread/bsp/: board.c  rtconfig.h
User/rt-thread/include/: rtdef.h  rthw.h  rtm.h
User/rt-thread/libcpu/arm/cortex-m3/: cpuport.c
User/rt-thread/src/: components.c  kservice.c  thread.c
User/thread/: thread_native.hpp
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
